# phoenixlang

./: .gitignore  Cargo.toml  syntax.txt
benches/: my_benchmark.rs
src/: cli.rs  debug.rs  error.rs  flamebytecode.rs  lib.rs  main.rs  strings.rs  utils.rs
src/compiler/: chunk.rs  mod.rs  module.rs  scanner.rs  token.rs
src/compiler/module/: logic.rs  types.rs
src/compiler/module/logic/: symbols.rs
src/compiler/scanner/: mod.rs  token.rs
src/vm/: mod.rs  value.rs
test/: Feather.toml  main.phx
