[package]
name = "phoenixlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.18", features = ["derive"]}
ahash = {version = "0.8.7", default-features = false }
toml = "0.8.10"
either = "1.10.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
